--- a/microsetta_interface/templates/request_account_deletion_confirm.jinja2
+++ b/microsetta_interface/templates/request_account_deletion_confirm.jinja2
@@ -24,7 +24,7 @@
         <h5 class="card-header" style="text-align: center">{{ _('Account Removal Requested') }}</h5>
         <div class="card-body">
             <center>
-                {{ _('We are sorry to see you go! Your request has been logged and you will receive an email notification once your account has been deleted.') }}
+                {{ _("We are sorry to see you go! Your request has been logged, and an administrator will review the request soon. You will receive an email notification once your account has been deleted.") }}
             </center>
         </div>
     </div>
